[package]
name = "amplitude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[workspace.dependencies]
sea-orm = { version = "0.12.14", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "uuid",
] }
serde = "1.0.197"
serde_yaml = "0.9.32"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

sea-orm = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

axum = { version = "0.7.1", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
eyre = "0.6.2"
tokio = "1.36.0"
uuid = { version = "1.7.0", features = ["v7"] }
dotenv = "0.15.0"
google-oauth = "1.10.1"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
thiserror = "1.0.57"
serde_json = "1.0.114"
