[package]
name = "amplitude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[workspace.dependencies]
sea-orm = { version = "0.12.14", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "uuid",
] }
serde = "1.0.197"
serde_yaml = "0.9.32"
tracing = "0.1.40"
eyre = "0.6.2"
chrono = "0.4.34"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

sea-orm = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }
chrono = { workspace = true }

axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

tracing-subscriber = "0.3.19"
tokio = { version = "1.42.0", features = ["signal"] }
uuid = { version = "1.11.0", features = ["v7"] }
dotenv = "0.15.0"
google-oauth = "1.11.3"
thiserror = "2.0.4"
serde_json = "1.0.133"
log = "0.4.22"
nu-ansi-term = "0.50.1"
docker-api = { git = "https://github.com/vv9k/docker-api-rs.git", rev = "b1f1891" }
futures = "0.3.31"
handlebars = "6.2.0"
